[FIX] web: daterange field: fix the input display
Before, the input of the daterange field exceeded the size of its
parent, which caused an overflow and thus a visual bug in the form
and kanban view.
Now the daterange field is displayed as expected.

Step to reproduce the bug:
- Event > Quick create : the daterange is overflowing the parent
- Event > Create : the daterange is not displayed as expected

task-2967165

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -84,7 +84,7 @@ $o-form-label-margin-right: 0px;
         margin: 0 (-$o-form-spacing-unit/2);
 
         > div, > span, > button, > label, > a, > input, > select { // > * did not add a level of priority to the rule
-            flex: 0 0 auto;
+            flex: 0 1 auto;
             width: auto!important;
             margin-right: $o-form-spacing-unit/2;
             margin-left: $o-form-spacing-unit/2;
